--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.1",
+    "@sweetalert2/theme-borderless": "^5.0.5",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "sweetalert2": "^11.1.7",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@nuxtjs/style-resources": "^1.2.1",
     "fibers": "^5.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "sass": "^1.32.12",
