--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sweetalert2/theme-borderless": "^5.0.5",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.6.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "sweetalert2": "^11.1.7",
