--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^3.6.0",
+    "chartjs-chart-wordcloud": "^3.6.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "sweetalert2": "^11.1.7",
+    "vue-select": "^3.16.0",
     "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
