--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "sweetalert2": "^11.1.7",
+    "vue-ellipse-progress": "^1.3.1",
     "vue-select": "^3.16.0",
     "vue-sweetalert2": "^5.0.2"
   },
