--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sweetalert2": "^11.1.7",
     "vue-ellipse-progress": "^1.3.1",
     "vue-select": "^3.16.0",
-    "vue-sweetalert2": "^5.0.2"
+    "vue-sweetalert2": "^5.0.2",
+    "xlsx": "^0.18.2"
   },
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
